--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>الأستاذ الدكتور وليد محمد شيت العبدربه</title>
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/academic-site/style.css">
 </head>
 
 <body>
