--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>الأستاذ الدكتور وليد محمد شيت العبدربه</title>
 <link rel="stylesheet" href="/academic-site/style.css">
+<link rel="stylesheet" href="/academic-site/style-ar.css">
 </head>
 
 <body>
